<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/spacing_default">

    <EditText
        android:id="@+id/search_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name" />

    <EditText
        android:id="@+id/search_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_half"
        android:hint="@string/hint_status" />

    <EditText
        android:id="@+id/search_species"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_half"
        android:hint="@string/hint_species" />

    <EditText
        android:id="@+id/search_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_half"
        android:hint="@string/hint_type" />

    <EditText
        android:id="@+id/search_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_half"
        android:hint="@string/hint_gender" />

    <Button
        android:id="@+id/button_show_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_big"
        android:background="@drawable/background_button"
        android:text="@string/show_result"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold" />
</LinearLayout>