<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_main"
    app:startDestination="@id/home_fragment">

    <!--  HomeFragment  -->
    <fragment
        android:id="@+id/home_fragment"
        android:name="com.example.rick_morty_app.presentation.fragment.HomeFragment"
        android:label="@string/header_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_home_to_character_details_fragment"
            app:destination="@+id/character_details_fragment" />
    </fragment>

    <!--  SearchFragment  -->
    <fragment
        android:id="@+id/search_fragment"
        android:name="com.example.rick_morty_app.presentation.fragment.SearchFragment"
        android:label="@string/header_search"
        tools:layout="@layout/fragment_search">

        <action
            android:id="@+id/action_search_to_show_result_fragment"
            app:destination="@+id/show_result_fragment" />
    </fragment>

    <!--  FavouriteFragment  -->
    <fragment
        android:id="@+id/favourite_fragment"
        android:name="com.example.rick_morty_app.presentation.fragment.FavouriteFragment"
        android:label="@string/header_favorites"
        tools:layout="@layout/fragment_favourite">

        <action
            android:id="@+id/action_favourite_to_character_details_fragment"
            app:destination="@id/character_details_fragment" />
    </fragment>

    <!--  ShowResultFragment  -->
    <fragment
        android:id="@+id/show_result_fragment"
        android:name="com.example.rick_morty_app.presentation.fragment.ShowResultFragment"
        android:label="@string/header_show_result"
        tools:layout="@layout/fragment_show_result">

        <action
            android:id="@+id/action_show_result_to_character_details_fragment"
            app:destination="@id/character_details_fragment" />
    </fragment>

    <!--  CharacterDetailsFragment  -->
    <fragment
        android:id="@+id/character_details_fragment"
        android:name="com.example.rick_morty_app.presentation.fragment.CharacterDetailsFragment"
        android:label="@string/header_character_details"
        tools:layout="@layout/fragment_character_details" />
</navigation>